[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paygate-python"
version = "0.1.0"
description = "Official Python SDK for the openbcp USDT BEP20 payment gateway"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "openbcp" }]
keywords = ["usdt", "bep20", "payments", "crypto", "paygate", "bnb"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "responses>=0.25",
]

[project.urls]
Homepage = "https://github.com/usdt-paygate/paygate-python"
"Bug Tracker" = "https://github.com/usdt-paygate/paygate-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/paygate"]
